Incorporate changes from engineering review

--- a/website/pages/docs/upgrading/instructions/general-process.mdx
+++ b/website/pages/docs/upgrading/instructions/general-process.mdx
@@ -162,8 +162,7 @@ then these options for further assistance are available:
 - OSS users without paid support plans can request help in our [Community Forum](https://discuss.hashicorp.com/c/consul/29)
 - Enterprise and OSS users with paid support plans can contact [HashiCorp Support](https://support.hashicorp.com/)
 
-If you end up contacting support, please make sure you include the following information
-in your support ticket:
+When contacting Hashicorp Support, please include the following information in your ticket:
 
 - Consul version you were upgrading FROM and TO.
 - [Debug level logs](/docs/agent/options.html#_log_level) from all servers in the cluster
